--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "mistralrs-server-core",
+    "mistralrs-server",
     "mistralrs-core",
     "mistralrs-pyo3",
     "mistralrs",
